Closed
Bug 358398
Opened 19 years ago
Closed 19 years ago
Horizontally scrolled trees incorrectly clip text
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bzbarsky, Assigned: neil)
References
()
Details
Attachments
(1 file, 1 obsolete file)
|
5.04 KB,
patch
|
enndeakin
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
STEPS TO REPRODUCE:
1) Load https://bugzilla.mozilla.org/attachment.cgi?id=243782&action=view
2) Scroll the tree to the right
EXPECTED RESULTS: Text appears in all columns
ACTUAL RESULTS: Text does not appear in columns that were not originally visible.
| Reporter | ||
Comment 1•19 years ago
|
||
Regression range is from 2006-02-13-06 to 2006-02-14-08. Checkins:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-02-13+06&maxdate=2006-02-14+08&cvsroot=%2Fcvsroot
This regressed due to the patch in bug 306990 (tested via putting back the early return if (aCol->GetNext()) -- that fixed all the columns except the last one.
Blocks: 306990
Flags: blocking1.9?
| Reporter | ||
Comment 2•19 years ago
|
||
See also bug 212789 comment 111.
| Assignee | ||
Comment 3•19 years ago
|
||
This is just a proof of concept review.
CalcColumnRect looks as if it should be inlined.
I also need to figure out how clipping works.
Assignee: Jan.Varga → neil
Status: NEW → ASSIGNED
Attachment #243832 -
Flags: superreview?(roc)
Attachment #243832 -
Flags: review?(enndeakin)
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #243832 -
Attachment is obsolete: true
Attachment #243853 -
Flags: superreview?(roc)
Attachment #243853 -
Flags: review?(enndeakin)
Attachment #243832 -
Flags: superreview?(roc)
Attachment #243832 -
Flags: review?(enndeakin)
Updated•19 years ago
|
Flags: in-testsuite?
Updated•19 years ago
|
Attachment #243853 -
Flags: review?(enndeakin) → review+
Attachment #243853 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 5•19 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•18 years ago
|
Flags: blocking1.9?
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: xptoolkit.trees → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•