Bug 358398 Horizontally scrolled trees don't paint correctly r=enn sr=roc